swagger added to every handler
